Changed sections layouts

--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,8 @@
 
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="http://fonts.googleapis.com/css?family=Roboto:400,100,300,500,700,900&amp;subset=cyrillic" rel="stylesheet" type="text/css">
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Poiret+One&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -28,7 +30,7 @@
 
 </head>
 
-<body data-spy="scroll" id="page-top">
+<body class="dada" data-spy="scroll" id="page-top">
 
     <div class="mobileMenu" id="menu-toggle">
         <ul>
@@ -49,10 +51,7 @@
                     </a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="#about"><span>About</span><i class="fa fa-users fa-3"></i></a>
-                </li>
-                <li>
-                    <a class="page-scroll" href="#team"><span>Team</span><i class="fa fa-users fa-3"></i></a>
+                    <a class="page-scroll" href="#about"><span>About</span><i class="fa fa-info-circle fa-3"></i></a>
                 </li>
                 <li>
                     <a class="page-scroll" href="#medical-issues"><span>Medical issues</span><i class="fa fa-heart fa-3"></i></a>
@@ -62,6 +61,9 @@
                 </li>
                 <li>
                     <a class="page-scroll" href="#pricing"><span>Pricing</span><i class="fa fa-money fa-3"></i></a>
+                </li>
+                <li>
+                    <a class="page-scroll" href="#team"><span>Team</span><i class="fa fa-users fa-3"></i></a>
                 </li>
                 <li>
                     <a class="page-scroll" href="#contacts"><span>Contact</span><i class="fa fa-phone-square fa-3"></i></a>
@@ -86,145 +88,149 @@
             </div>
         </div>
         <!-- /#sidebar-wrapper -->
+        <div class="main" id="page-content-wrapper"  style="width: 100%; height: 100%;">
 
-        <div>
-            <div class="main" id="page-content-wrapper" >
-
-                <!-- Sections  -->
-                <section id="landing">
-                    <!-- Arrow -->
-                    <div class="arrow">
-                        <div class="arrow-body">
-                            <div class="container">
-                                <div class="row">
-                                    <div class="col-md-8 col-md-offset-2">
-                                        <a href="#about" class="btn btn-circle page-scroll">
-                                            <i class="fa fa-angle-double-down animated"></i>
-                                        </a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <video autoplay loop muted id="bgvid">
-                        <source src="http://video-js.zencoder.com/oceans-clip.mp4" type="video/mp4">
-                    </video>
-                </section>
-
-                <section id="about" class="odd">
-                    <div class="row">
-                        <div class="col-md-2 col-md-offset-3 section-head"><span>About "Physiotherapy Bio Center"</span></div>
-                        <div class="col-md-6 col-md-offset-3 about-content">
-                            <p>The "Physiotherapy Bio Center" was created to treat, restore, maintain and care for the physical health of our clients. The center is qualified in Massage Therapy (Physiotherapy) and Physical Medicine. We have the latest generation of high quality equipment for physiotherapy (electrotherapy, Ultrasound therapy, Deep oscillation) from the German company Physiomed, which is a leading manufacturer of equipment for the rehabilitation. All our products including massage oils are organic in origin.</p>
-                            <p>With us you can count on professionalism and the highest quality.</p>
-                        </div>
-                    </div>
-                </section>
-
-                <section id="team" class="odd">
-                    <div class="row">
-                        <div class="col-md-2 col-md-offset-3 section-head"><span>Team</span></div>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-3 col-md-offset-3">
-                            <div class="person-pic">
-                                <img src="img/panos.jpg" />
-                                <span class="person-pic-title">Panagiotis Tsimplis</span>
-                            </div>
-                        </div>
-                        <div class="col-md-3">
-                            <div class="person-info"></div>
-                        </div>
-                        <div class="col-md-3">
-                        </div>
-                    </div>
-                </section>
-
-                <section id="medical-issues" class="even">
-                    <div data-center="background-position: 50% 0px;" data-top-bottom="background-position: 50% -100px;"
-                        data-anchor-target="#medical-issues" style="background-position: 50% 0px;">
-                        <div class="hsContainer">
-                            <div class="hsContent" data-center="opacity: 1" data-106-top="opacity: 0" data-anchor-target="#medical-issues h2">
-                                <h2>Fade out elements before
-                                <br />
-                                    they leave viewport</h2>
-                                <p>
-                                    This slide moves background image at a slower speed then the page scroll. Text is fading out to opacity 0 at 106
-                                pixels from the top.
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                </section>
-
-                <section id="procedures" class="odd">
-                    <div data-center="background-position: 50% 0px;" data-top-bottom="background-position: 50% -100px;"
-                        data-anchor-target="#procedures" style="background-position: 50% 0px;">
-                        <div class="hsContainer">
-                            <div class="hsContent" data-center="opacity: 1" data-106-top="opacity: 0" data-anchor-target="#procedures h2">
-                                <h2>Fade out elements before
-                                <br />
-                                    they leave viewport</h2>
-                                <p>
-                                    This slide moves background image at a slower speed then the page scroll. Text is fading out to opacity 0 at 106
-                                pixels from the top.
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                </section>
-
-                <section id="pricing" class="even">
-                    <div class="hsContainer">
-                        <div class="hsContent">
-                        </div>
-                    </div>
-                </section>
-
-                <!-- Contact Section -->
-                <section id="contacts" class="odd text-center">
-                    <!-- <div class="row"> -->
-                    <div class="contact-section">
+            <!-- Sections  -->
+            <section id="landing">
+                <!-- Arrow -->
+                <div class="arrow">
+                    <div class="arrow-body">
                         <div class="container">
-                            <h2>Contact Us</h2>
-                            <div class="row" style="section-content">
-                                <div class="col-md-6">
-                                    <table>
-                                        <tr>
-                                            <td><i class="fa fa-home fa-2x"></i></td>
-                                            <td>38 Architect Jordan Milanov str.</td>
-                                        </tr>
-                                        <tr>
-                                            <td><i class="fa fa-mobile fa-3x"></i></td>
-                                            <td>+359 887 717 276</td>
-                                        </tr>
-                                        <tr>
-                                            <td><a href="mailto:office@pbioc.com"><i class="fa fa-envelope-o fa-2x"></i></a></td>
-                                            <td><a href="mailto:office@pbioc.com">office@pbioc.com</a></td>
-                                        </tr>
-                                    </table>
-
-                                    <div class="banner-social-buttons">
-                                        <a href="https://facebook.com/pbioc" class="" style="padding: 10px" target="_blank">
-                                            <i class="fa fa-facebook fa-3x"></i>
-                                        </a>
-
-                                        <a href="https://www.linkedin.com/nhome/" class="" style="padding: 10px" target="_blank">
-                                            <i class="fa fa-linkedin fa-3x"></i>
-                                        </a>
-
-                                        <a href="http://www.pinterest.com/" class="" style="padding: 10px" target="_blank">
-                                            <i class="fa fa-pinterest-square fa-3x"></i>
-                                        </a>
-                                    </div>
+                            <div class="row">
+                                <div class="col-md-8 col-md-offset-2">
+                                    <a href="#about" class="btn btn-circle page-scroll">
+                                        <i class="fa fa-angle-double-down animated"></i>
+                                    </a>
                                 </div>
-                                <div class="col-md-6">
-                                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2933.205991239886!2d23.33333689999999!3d42.6781787!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40aa85af39f43bdb%3A0x764b661931f5dc2!2z0YPQuy4g4oCe0LDRgNGFLiDQmdC-0YDQtNCw0L0g0JzQuNC70LDQvdC-0LLigJwgMzgsIDExNjQg0KHQvtGE0LjRjw!5e0!3m2!1sbg!2sbg!4v1412811241353" width="100%" height="350" frameborder="0"></iframe>
-                                  </div>
                             </div>
                         </div>
-                </section>
-            </div>
+                    </div>
+                </div>
+                <video autoplay loop muted id="bgvid">
+                    <source src="http://video-js.zencoder.com/oceans-clip.mp4" type="video/mp4">
+                </video>
+            </section>
+
+            <section id="about" class="odd">
+                <div class="row">
+                    <div class="col-md-3 col-md-offset-2 section-head"><span>About "Physiotherapy Bio Center"</span></div>
+                </div>
+                <div class="row content">
+                    <div class="col-md-3 col-md-offset-2">
+                        <p>The "Physiotherapy Bio Center" was created to treat, restore, maintain and care for the physical health of our clients. The center is qualified in Massage Therapy (Physiotherapy) and Physical Medicine. We have the latest generation of high quality equipment for physiotherapy (electrotherapy, Ultrasound therapy, Deep oscillation) from the German company Physiomed, which is a leading manufacturer of equipment for the rehabilitation. All our products including massage oils are organic in origin.</p>
+                        <p>With us you can count on professionalism and the highest quality.</p>
+                    </div>
+                    <div class="about-pic">
+                    </div>
+                </div>
+            </section>
+
+            <section id="medical-issues" class="even">
+                <div class="row">
+                    <div class="col-md-3 col-md-offset-2 section-head"><span>Medical issues</span></div>
+                </div>
+                <div class="row content">
+                    <div class="col-md-3 col-md-offset-2">
+                        <p class="paragraph-title">Musculoskeletal</p>
+                        <ul>
+                            <li>Pain in the neck</li>
+                            <li>Backache</li>
+                            <li>Disc herniation</li>
+                            <li>Radiculopathy</li>
+                            <li>Osteoarthritis</li>
+                            <li>Conditions after endoprosthesis, hip and knee joints</li>
+                            <li>Sprain and dislocation</li>
+                            <li>Traumatic and inflammatory damage to muscles and tendons</li>
+                            <li>Kyphosis and scoliosis</li>
+                            <li>Contractures of skin-muscle origin</li>
+                        </ul>
+                    </div>
+                    <div class="col-md-3">
+                        <p class="paragraph-title">Central and peripheral nervous system</p>
+                        <ul>
+                            <li>Conditions of physical and mental fatigue</li>
+                            <li>Post-stroke conditions</li>
+                            <li>Multiple sclerosis</li>
+                            <li>Paralysis of the facial nerve</li>
+                            <li>Neuritis</li>
+                            <li>Radiculitis</li>
+                            <li>Plexin</li>
+                            <li>Paresis, paralysis</li>
+                        </ul>
+                    </div>
+                </div>
+            </section>
+
+            <section id="procedures" class="odd">
+                <div class="row">
+                    <div class="col-md-3 col-md-offset-2 section-head"><span>Procedures</span></div>
+                </div>
+                <div class="row content">
+                    <div class="col-md-6 col-md-offset-2">
+                        <ul>
+                            <li>Electrotherapy</li>
+                            <li>Ultrasonic therapy</li>
+                            <li>Iontophoresis</li>
+                            <li>Deep oscillation therapy</li>
+                            <li>Manual therapy - soft tissue techniques and mobilization of the spine and peripheral joints</li>
+                            <li>Kinesio taping</li>
+                            <li>Acupuncture</li>
+                            <li>Acupressure</li>
+                            <li>Treatment of trigger points</li>
+                            <li>Teraband exercises</li>
+                            <li>Respiratory gymnastics</li>
+                            <li>Muscle relaxation and stretching</li>
+                            <li>Manual lymph drainage</li>
+                            <li>Therapeutic massage</li>
+                            <li>Sports Massage</li>
+                        </ul>
+                    </div>
+                </div>
+            </section>
+
+            <section id="pricing" class="even">
+                <div class="hsContainer">
+                    <div class="hsContent">
+                    </div>
+                </div>
+            </section>
+
+            <section id="team" class="odd">
+                <div class="row">
+                    <div class="col-md-3 col-md-offset-2 section-head"><span>Team</span></div>
+                </div>
+                <div class="row content">
+                </div>
+            </section>
+
+            <section id="contacts" class="odd text-center">
+                <!-- <div class="row"> -->
+                <div class="contact-section">
+                    <div class="container">
+                        <h2>Contact Us</h2>
+                        <div class="row" style="section-content">
+                            <div class="col-md-6">
+                                <table>
+                                    <tr>
+                                        <td><i class="fa fa-home fa-2x"></i></td>
+                                        <td>38 Architect Jordan Milanov str.</td>
+                                    </tr>
+                                    <tr>
+                                        <td><i class="fa fa-mobile fa-3x"></i></td>
+                                        <td>+359 887 717 276</td>
+                                    </tr>
+                                    <tr>
+                                        <td><a href="mailto:office@pbioc.com"><i class="fa fa-envelope-o fa-2x"></i></a></td>
+                                        <td><a href="mailto:office@pbioc.com">office@pbioc.com</a></td>
+                                    </tr>
+                                </table>
+                            </div>
+                            <div class="col-md-6">
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2933.205991239886!2d23.33333689999999!3d42.6781787!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40aa85af39f43bdb%3A0x764b661931f5dc2!2z0YPQuy4g4oCe0LDRgNGFLiDQmdC-0YDQtNCw0L0g0JzQuNC70LDQvdC-0LLigJwgMzgsIDExNjQg0KHQvtGE0LjRjw!5e0!3m2!1sbg!2sbg!4v1412811241353" width="100%" height="350" frameborder="0"></iframe>
+                              </div>
+                        </div>
+                    </div>
+            </section>
 
             <!-- Footer -->
             <footer class="even">
