Updated the "Medical Issues" section.

--- a/public/index.html
+++ b/public/index.html
@@ -59,9 +59,11 @@
                 <li>
                     <a class="page-scroll" href="#procedures"><span>Procedures</span><i class="fa fa-check fa-3"></i></a>
                 </li>
+                <!--
                 <li>
                     <a class="page-scroll" href="#pricing"><span>Pricing</span><i class="fa fa-money fa-3"></i></a>
                 </li>
+                -->
                 <li>
                     <a class="page-scroll" href="#team"><span>Team</span><i class="fa fa-users fa-3"></i></a>
                 </li>
@@ -120,46 +122,57 @@
                         <p>The "Physiotherapy Bio Center" was created to treat, restore, maintain and care for the physical health of our clients. The center is qualified in Massage Therapy (Physiotherapy) and Physical Medicine. We have the latest generation of high quality equipment for physiotherapy (electrotherapy, Ultrasound therapy, Deep oscillation) from the German company Physiomed, which is a leading manufacturer of equipment for the rehabilitation. All our products including massage oils are organic in origin.</p>
                         <p>With us you can count on professionalism and the highest quality.</p>
                     </div>
-                    <div class="about-pic">
+                    <div class="col-md-4 about-pic">
                     </div>
                 </div>
             </section>
 
+            <section class="separator-section"></section>
+
             <section id="medical-issues" class="even">
-                <div class="row">
-                    <div class="col-md-3 col-md-offset-2 section-head"><span>Medical issues</span></div>
-                </div>
-                <div class="row content">
-                    <div class="col-md-3 col-md-offset-2">
-                        <p class="paragraph-title">Musculoskeletal</p>
-                        <ul>
-                            <li>Pain in the neck</li>
-                            <li>Backache</li>
-                            <li>Disc herniation</li>
-                            <li>Radiculopathy</li>
-                            <li>Osteoarthritis</li>
-                            <li>Conditions after endoprosthesis, hip and knee joints</li>
-                            <li>Sprain and dislocation</li>
-                            <li>Traumatic and inflammatory damage to muscles and tendons</li>
-                            <li>Kyphosis and scoliosis</li>
-                            <li>Contractures of skin-muscle origin</li>
-                        </ul>
+                <div class="glass">
+                    <div class="row">
+                        <div class="col-md-3 col-md-offset-6 section-head"><span>Medical issues</span></div>
                     </div>
-                    <div class="col-md-3">
-                        <p class="paragraph-title">Central and peripheral nervous system</p>
-                        <ul>
-                            <li>Conditions of physical and mental fatigue</li>
-                            <li>Post-stroke conditions</li>
-                            <li>Multiple sclerosis</li>
-                            <li>Paralysis of the facial nerve</li>
-                            <li>Neuritis</li>
-                            <li>Radiculitis</li>
-                            <li>Plexin</li>
-                            <li>Paresis, paralysis</li>
-                        </ul>
+                    <div class="row content">
+                        <div class="col-md-3 col-md-offset-6">
+                            <p class="paragraph-title">Musculoskeletal</p>
+                            <ul>
+                                <li>Pain in the neck</li>
+                                <li>Backache</li>
+                                <li>Disc herniation</li>
+                                <li>Radiculopathy</li>
+                                <li>Osteoarthritis</li>
+                                <li>Conditions after endoprosthesis, hip and knee joints</li>
+                                <li>Sprain and dislocation</li>
+                                <li>Traumatic and inflammatory damage to muscles and tendons</li>
+                                <li>Kyphosis and scoliosis</li>
+                                <li>Contractures of skin-muscle origin</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-1 col-md-offset-7 separator-row"></div>
+                    </div>
+                    <div class="row content">
+                        <div class="col-md-3 col-md-offset-6">
+                            <p class="paragraph-title">Central and peripheral nervous system</p>
+                            <ul>
+                                <li>Conditions of physical and mental fatigue</li>
+                                <li>Post-stroke conditions</li>
+                                <li>Multiple sclerosis</li>
+                                <li>Paralysis of the facial nerve</li>
+                                <li>Neuritis</li>
+                                <li>Radiculitis</li>
+                                <li>Plexin</li>
+                                <li>Paresis, paralysis</li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
             </section>
+
+            <section class="separator-section"></section>
 
             <section id="procedures" class="odd">
                 <div class="row">
@@ -184,13 +197,6 @@
                             <li>Therapeutic massage</li>
                             <li>Sports Massage</li>
                         </ul>
-                    </div>
-                </div>
-            </section>
-
-            <section id="pricing" class="even">
-                <div class="hsContainer">
-                    <div class="hsContent">
                     </div>
                 </div>
             </section>
